Prevent addition of tag names with leading/trailing whitespace

BUG: 481181